# ZRSTD

./: CMakeLists.txt  LICENSE  Readme.md
ZREval/: CMakeLists.txt  Cluster.cpp  ComparisonMethod.cpp  ComparisonMethod.h  DataTypes.h  MFCCs.cpp  MFCCs.h  Preprocessing.cpp  Preprocessing.h  Timer.h  TranscriptionUnit.cpp  ZREval.cpp  ZREval.h  main.cpp
ZREval/cudacompare/: Makefile  cudacompare.cu  main.cpp  testtriangle.py
ZREval/cudacompare/include/: cudacompare.h  helper_cuda.h
cmake/Modules/: FindLog4cxx.cmake
results/: Readme.txt
results/ICASSP2017/: Readme.txt
results/ICASSP2017/english/: DiscoveredClasses.txt
results/ICASSP2017/english/scores/: boundary  group  matching  nlp  token_type
